# womp-womp

./: .env  .gitignore  README.md  analysis.py  card.py  card_data.txt  main.py  pyproject.toml  render.py  requirements.txt  storage.py
cardpack/: info.json  offsets.txt
templates/: card_list.html  index.html  layout.html  show_card.html  ticket_list.html
test_data/: card_a.txt  card_b.txt  card_c.txt
